--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -7,9 +7,9 @@ provisioner:
 
 platforms:
   - name: ubuntu-12.04
-  - name: centos-6.4
+  - name: ubuntu-14.04
 
 suites:
   - name: default
-    run_list:
+    run_list: recipe[server-base]
     attributes:
