Added ruby-support recipe.

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -11,5 +11,5 @@ platforms:
 
 suites:
   - name: default
-    run_list: recipe[server-base]
+    run_list: recipe[server-base::ruby-support]
     attributes:
