--- a/server-base/test/Dockerfile
+++ b/server-base/test/Dockerfile
@@ -3,8 +3,10 @@ FROM ubuntu:trusty
 RUN apt-get update -y
 RUN apt-get upgrade -y
 RUN apt-get install openssh-server -y
-RUN ssh-keygen -q -t dsa -f /etc/ssh/ssh_host_dsa_key -N ''
-RUN ssh-keygen -q -t rsa -f /etc/ssh/ssh_host_rsa_key -N ''
+RUN ssh-keygen -t dsa -f /etc/ssh/ssh_host_dsa_key -N ''
+RUN y
+RUN ssh-keygen -t rsa -f /etc/ssh/ssh_host_rsa_key -N ''
+RUN y
 RUN echo 'OPTIONS="-o UseDNS=no -o UsePAM=no -o PasswordAuthentication=yes"' >> /etc/sysconfig/sshd
 RUN mkdir -p /var/run/sshd
 RUN service ssh restart
