--- a/server-base/test/Dockerfile
+++ b/server-base/test/Dockerfile
@@ -6,7 +6,7 @@ RUN apt-get install openssh-server -y
 RUN rm -f /etc/ssh/ssh_host_dsa_key && rm -f /etc/ssh/ssh_host_rsa_key
 RUN ssh-keygen -t dsa -f /etc/ssh/ssh_host_dsa_key -N ''
 RUN ssh-keygen -t rsa -f /etc/ssh/ssh_host_rsa_key -N ''
-RUN echo 'OPTIONS="-o UseDNS=no -o UsePAM=no -o PasswordAuthentication=yes"' >> /etc/sysconfig/sshd
+#RUN echo 'OPTIONS="-o UseDNS=no -o UsePAM=no -o PasswordAuthentication=yes"' >> /etc/sysconfig/sshd
 RUN mkdir -p /var/run/sshd
 RUN service ssh restart
 RUN useradd -d /home/kitchen -m -s /bin/bash kitchen
