--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -2,10 +2,10 @@ inherit_from: .rubocop_todo.yml
 
 AllCops:
   Exclude:
-    - lib/kitchen/driver/*
-    - lib/kitchen/driver/docker/*
-    - Vagrantfile
-    - berks-cookbooks/*
+    - 'lib/kitchen/driver/*'
+    - 'lib/kitchen/driver/docker/*'
+    - 'Vagrantfile'
+    - 'berks-cookbooks/**/*'
   TargetRubyVersion: 2.3
 AlignParameters:
   Enabled: false
