--- a/.kitchen.travis.yml
+++ b/.kitchen.travis.yml
@@ -6,10 +6,10 @@ driver:
 
 provisioner:
   name: chef_solo
-  require_chef_omnibus: 12
+#  require_chef_omnibus: 12
 
 platforms:
-  - name: ubuntu-14.04
+  - name: ubuntu-16.04
 
 suites:
   - name: default
