--- a/.kitchen.dokken.yml
+++ b/.kitchen.dokken.yml
@@ -12,19 +12,16 @@ provisioner:
   deprecations_as_errors: true
 
 platforms:
-  - name: ubuntu-14.04
-    driver:
-      image: ubuntu-upstart:14.04
-      pid_one_command: /sbin/init
-      intermediate_instructions:
-        - RUN /usr/bin/apt-get update
-        - RUN /usr/bin/apt-get install wget
   - name: ubuntu-16.04
     driver:
       image: ubuntu:16.04
       pid_one_command: /bin/systemd
       intermediate_instructions:
         - RUN /usr/bin/apt-get update
+  - name: centos-7
+    driver:
+      image: dokken/centos-7
+      pid_one_command: /usr/lib/systemd/systemd
 
 suites:
   - name: default
