--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -4,7 +4,8 @@ driver:
 
 provisioner:
   name: chef_solo
-  require_chef_omnibus: 13
+  product_name: chef
+  product_version: 13
 
 platforms:
   - name: ubuntu-16.04
