--- a/.kitchen.dokken.yml
+++ b/.kitchen.dokken.yml
@@ -26,3 +26,8 @@ platforms:
 suites:
   - name: default
     run_list: recipe[server-base::default]
+    attributes:
+      server-base:
+        install_dnsmasq: true
+        install_chef_client: true
+        install_kubeadm: true
