--- a/.kitchen.dokken.yml
+++ b/.kitchen.dokken.yml
@@ -31,3 +31,4 @@ suites:
         install_dnsmasq: true
         install_chef_client: true
         install_kubeadm: true
+        skip_selinux: true
