--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -7,8 +7,8 @@ AllCops:
     - 'Vagrantfile'
     - 'berks-cookbooks/**/*'
     - 'bin/*'
-  TargetRubyVersion: 2.3
-AlignParameters:
+  TargetRubyVersion: 2.6
+Layout/ParameterAlignment:
   Enabled: false
 
 Encoding:
